αrefactor(gui/core/simulator): pulito tutto il codice del progetto grazie a "Intellij Idea Code refactoring Tool"